# Gunduan2.0

./: .gitignore
FreedomGunduan/: CMakeLists.txt
FreedomGunduan/objs/: freedom.mtl  freedom_gunduan.mtl  leftFist.mtl  left_foot.mtl
FreedomGunduan/src/: Gundam.cpp  LoadShaders.h  ShadowShader.cpp  ShadowShader.h  main.cpp  main.h
FreedomGunduan/src/shaders/: DSPhong_Material.frag  DSPhong_Material.vert  diamond_surface.frag  diamond_surface.vert  gaussian.frag  gray.frag  mosaic.frag  pointSprite.frag  pointSprite.vert  radialBlur.frag  shadowDebug.frag  shadowDebug.vert  simple.frag  simple.vert  skybox.vert  texture.frag  texture.vert  toon.frag  toon.vert  uniform.frag  whiteNoise.frag
